@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts_Graph: Pass/fail graph formatting improvements
+
 Phoronix Test Suite 9.2.1
 11 December 2019
 
